# SnakeEngine

./: .gitignore  LICENSE  LICENSE.txt  README.md  demo.py  dependencies.md  pyproject.toml  requirements.txt
SnakeEditor/: main.py
SnakeEditor/ui/: projects.py  splash.py
SnakeEngine/: Application.py  Debug.py  Engine.py  GameScript.py  SnakeGLFW.py  Window.py  __init__.py  main.py  window.py
SnakeEngine/Assets/: DefaultAssets.py  OpenSansRegular_atlas.json
SnakeEngine/Assets/Shaders/: DefaultShader.vert  SkyboxDefaultShader.frag  SkyboxDefaultShader.vert  UIDefaultShader.frag  UIDefaultShader.vert
SnakeEngine/Audio/: AudioClip.py  AudioDevice.py  AudioListener.py  AudioManager.py  AudioSource.py
SnakeEngine/Core/: ArgumentParser.py  FileSystem.py  Game.py  GameEntity.py  GameScript.py  GameSettings.py  Input.py  Logger.py  Scene.py  ScriptManager.py  Window.py
SnakeEngine/Core/Mathematics/: Matrix4.py  Transform.py  Vector2.py  Vector3.py
SnakeEngine/Physics/: BoxCollider.py  Collider.py  PhysicsManager.py  Rigidbody.py  SphereCollider.py
SnakeEngine/Rendering/: Camera.py  GraphicsContext.py  Light.py  MeshRenderer.py  ShaderManager.py  Skybox.py  SnakeGLFW.py
SnakeEngine/UI/: Button.py  Canvas.py  Extent.py  Frame.py  Image.py  Label.py  Slider.py  Text.py
snake/: __init__.py
snake/editor/: __init__.py
snake/engine/: __init__.py  debug.py  engine.py  window.py
tests/: __init__.py  demo.py  test_runtime.py
tools/: deletePyCache.py  fontAtlasGen.py
