[project]
name = "SnakeEngine"
version = "0.01"
description = "A hobby project written in Python."
authors = [
    {name = "PawloZiom"}
]
license = {text = "Custom"}
keywords = ["game development", "3d"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glfw==2.9.0",
    "PyOpenGL==3.1.8",
    "PyOpenGL_accelerate==3.1.8",
    "Pyrr==0.10.3",
    "Pillow==11.3.0",
    "multipledispatch==1.0.0",
    "numpy==2.3.2"
]